--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".changehuilv" />
+        <activity android:name=".list"/>
         <activity android:name=".huilv">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
